--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cart-items{
+display:inline-flex;
+margin: 20px 10px;
+}
+.cart-items.right{
+padding: 0 20px;
+}
+.action{
+margin-top: 20px;
+}
+.action-icon{
+height: 25px;
+width: 25px;
+margin-right:10px;
+}
+.action-icon:hover{
+cursor:pointer
 }
