--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,12 @@ padding: 0 20px;
 margin-top: 20px;
 }
 .action-icon{
+  display: inline;
 height: 25px;
 width: 25px;
 margin-right:10px;
+margin-top: 10px;
 }
 .action-icon:hover{
-cursor:pointer
+cursor:pointer;
 }
